Should fix my issue with horizontal scrolling

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -104,6 +104,11 @@ $lightGray: #f5f5f5;
 	}
 }
 
+body {
+	position: relative;
+	overflow-x: hidden;
+}
+
 .siteContainer {
 	height: 100%;
 	width: 100%;
